include/El/blas_like/level1.h

/* EntrywiseFill
   ============= */
EL_EXPORT ElError ElEntrywiseFill_i( ElMatrix_i A, ElInt (*fill)() );
EL_EXPORT ElError ElEntrywiseFill_s( ElMatrix_s A, float (*fill)() );
EL_EXPORT ElError ElEntrywiseFill_d( ElMatrix_d A, double (*fill)() );
EL_EXPORT ElError ElEntrywiseFill_c( ElMatrix_c A, complex_float (*fill)() );
EL_EXPORT ElError ElEntrywiseFill_z( ElMatrix_z A, complex_double (*fill)() );
EL_EXPORT ElError ElEntrywiseFillDist_i
( ElDistMatrix_i A, ElInt (*fill)() );
EL_EXPORT ElError ElEntrywiseFillDist_s
( ElDistMatrix_s A, float (*fill)() );
EL_EXPORT ElError ElEntrywiseFillDist_d
( ElDistMatrix_d A, double (*fill)() );
EL_EXPORT ElError ElEntrywiseFillDist_c
( ElDistMatrix_c A, complex_float (*fill)() );
EL_EXPORT ElError ElEntrywiseFillDist_z
( ElDistMatrix_z A, complex_double (*fill)() );
EL_EXPORT ElError ElEntrywiseFillDistMultiVec_i
( ElDistMultiVec_i A, ElInt (*fill)() );
EL_EXPORT ElError ElEntrywiseFillDistMultiVec_s
( ElDistMultiVec_s A, float (*fill)() );
EL_EXPORT ElError ElEntrywiseFillDistMultiVec_d
( ElDistMultiVec_d A, double (*fill)() );
EL_EXPORT ElError ElEntrywiseFillDistMultiVec_c
( ElDistMultiVec_c A, complex_float (*fill)() );
EL_EXPORT ElError ElEntrywiseFillDistMultiVec_z
( ElDistMultiVec_z A, complex_double (*fill)() );
/* GetSubmatrix
   ============ */

/* Contiguous
   ---------- */
EL_EXPORT ElError ElGetContigSubmatrix_i
( ElConstMatrix_i A, ElRange_i iRange, ElRange_i jRange,
  ElMatrix_i ASub );
EL_EXPORT ElError ElGetContigSubmatrix_s
( ElConstMatrix_s A, ElRange_i iRange, ElRange_i jRange,
  ElMatrix_s ASub );
EL_EXPORT ElError ElGetContigSubmatrix_d
( ElConstMatrix_d A, ElRange_i iRange, ElRange_i jRange,
  ElMatrix_d ASub );
EL_EXPORT ElError ElGetContigSubmatrix_c
( ElConstMatrix_c A, ElRange_i iRange, ElRange_i jRange,
  ElMatrix_c ASub );
EL_EXPORT ElError ElGetContigSubmatrix_z
( ElConstMatrix_z A, ElRange_i iRange, ElRange_i jRange,
  ElMatrix_z ASub );
EL_EXPORT ElError ElGetContigSubmatrixDist_i
( ElConstDistMatrix_i A, ElRange_i iRange, ElRange_i jRange,
  ElDistMatrix_i ASub );
EL_EXPORT ElError ElGetContigSubmatrixDist_s
( ElConstDistMatrix_s A, ElRange_i iRange, ElRange_i jRange,
  ElDistMatrix_s ASub );
EL_EXPORT ElError ElGetContigSubmatrixDist_d
( ElConstDistMatrix_d A, ElRange_i iRange, ElRange_i jRange,
  ElDistMatrix_d ASub );
EL_EXPORT ElError ElGetContigSubmatrixDist_c
( ElConstDistMatrix_c A, ElRange_i iRange, ElRange_i jRange,
  ElDistMatrix_c ASub );
EL_EXPORT ElError ElGetContigSubmatrixDist_z
( ElConstDistMatrix_z A, ElRange_i iRange, ElRange_i jRange,
  ElDistMatrix_z ASub );
EL_EXPORT ElError ElGetContigSubmatrixSparse_i
( ElConstSparseMatrix_i A, ElRange_i iRange, ElRange_i jRange,
  ElSparseMatrix_i ASub );
EL_EXPORT ElError ElGetContigSubmatrixSparse_s
( ElConstSparseMatrix_s A, ElRange_i iRange, ElRange_i jRange,
  ElSparseMatrix_s ASub );
EL_EXPORT ElError ElGetContigSubmatrixSparse_d
( ElConstSparseMatrix_d A, ElRange_i iRange, ElRange_i jRange,
  ElSparseMatrix_d ASub );
EL_EXPORT ElError ElGetContigSubmatrixSparse_c
( ElConstSparseMatrix_c A, ElRange_i iRange, ElRange_i jRange,
  ElSparseMatrix_c ASub );
EL_EXPORT ElError ElGetContigSubmatrixSparse_z
( ElConstSparseMatrix_z A, ElRange_i iRange, ElRange_i jRange,
  ElSparseMatrix_z ASub );
EL_EXPORT ElError ElGetContigSubmatrixDistSparse_i
( ElConstDistSparseMatrix_i A, ElRange_i iRange, ElRange_i jRange,
  ElDistSparseMatrix_i ASub );
EL_EXPORT ElError ElGetContigSubmatrixDistSparse_s
( ElConstDistSparseMatrix_s A, ElRange_i iRange, ElRange_i jRange,
  ElDistSparseMatrix_s ASub );
EL_EXPORT ElError ElGetContigSubmatrixDistSparse_d
( ElConstDistSparseMatrix_d A, ElRange_i iRange, ElRange_i jRange,
  ElDistSparseMatrix_d ASub );
EL_EXPORT ElError ElGetContigSubmatrixDistSparse_c
( ElConstDistSparseMatrix_c A, ElRange_i iRange, ElRange_i jRange,
  ElDistSparseMatrix_c ASub );
EL_EXPORT ElError ElGetContigSubmatrixDistSparse_z
( ElConstDistSparseMatrix_z A, ElRange_i iRange, ElRange_i jRange,
  ElDistSparseMatrix_z ASub );
EL_EXPORT ElError ElGetContigSubmatrixDistMultiVec_i
( ElConstDistMultiVec_i A, ElRange_i iRange, ElRange_i jRange,
  ElDistMultiVec_i ASub );
EL_EXPORT ElError ElGetContigSubmatrixDistMultiVec_s
( ElConstDistMultiVec_s A, ElRange_i iRange, ElRange_i jRange,
  ElDistMultiVec_s ASub );
EL_EXPORT ElError ElGetContigSubmatrixDistMultiVec_d
( ElConstDistMultiVec_d A, ElRange_i iRange, ElRange_i jRange,
  ElDistMultiVec_d ASub );
EL_EXPORT ElError ElGetContigSubmatrixDistMultiVec_c
( ElConstDistMultiVec_c A, ElRange_i iRange, ElRange_i jRange,
  ElDistMultiVec_c ASub );
EL_EXPORT ElError ElGetContigSubmatrixDistMultiVec_z
( ElConstDistMultiVec_z A, ElRange_i iRange, ElRange_i jRange,
  ElDistMultiVec_z ASub );
/* Non-contiguous
   -------------- */
/* TODO: Build wrappers */

/* Hadamard
   ======== */
EL_EXPORT ElError ElHadamard_i
( ElConstMatrix_i A, ElConstMatrix_i B, ElMatrix_i C );
EL_EXPORT ElError ElHadamard_s
( ElConstMatrix_s A, ElConstMatrix_s B, ElMatrix_s C );
EL_EXPORT ElError ElHadamard_d
( ElConstMatrix_d A, ElConstMatrix_d B, ElMatrix_d C );
EL_EXPORT ElError ElHadamard_c
( ElConstMatrix_c A, ElConstMatrix_c B, ElMatrix_c C );
EL_EXPORT ElError ElHadamard_z
( ElConstMatrix_z A, ElConstMatrix_z B, ElMatrix_z C );
EL_EXPORT ElError ElHadamardDist_i
( ElConstDistMatrix_i A, ElConstDistMatrix_i B, ElDistMatrix_i C );
EL_EXPORT ElError ElHadamardDist_s
( ElConstDistMatrix_s A, ElConstDistMatrix_s B, ElDistMatrix_s C );
EL_EXPORT ElError ElHadamardDist_d
( ElConstDistMatrix_d A, ElConstDistMatrix_d B, ElDistMatrix_d C );
EL_EXPORT ElError ElHadamardDist_c
( ElConstDistMatrix_c A, ElConstDistMatrix_c B, ElDistMatrix_c C );
EL_EXPORT ElError ElHadamardDist_z
( ElConstDistMatrix_z A, ElConstDistMatrix_z B, ElDistMatrix_z C );
/* HilbertSchmidt
   ============== */
/* NOTE: This is the same as Dot */
EL_EXPORT ElError ElHilbertSchmidt_i
( ElConstMatrix_i A, ElConstMatrix_i B, ElInt* prod );
EL_EXPORT ElError ElHilbertSchmidt_s
( ElConstMatrix_s A, ElConstMatrix_s B, float* prod );
EL_EXPORT ElError ElHilbertSchmidt_d
( ElConstMatrix_d A, ElConstMatrix_d B, double* prod );
EL_EXPORT ElError ElHilbertSchmidt_c
( ElConstMatrix_c A, ElConstMatrix_c B, complex_float* prod );
EL_EXPORT ElError ElHilbertSchmidt_z
( ElConstMatrix_z A, ElConstMatrix_z B, complex_double* prod );
EL_EXPORT ElError ElHilbertSchmidtDist_i
( ElConstDistMatrix_i A, ElConstDistMatrix_i B, ElInt* prod );
EL_EXPORT ElError ElHilbertSchmidtDist_s
( ElConstDistMatrix_s A, ElConstDistMatrix_s B, float* prod );
EL_EXPORT ElError ElHilbertSchmidtDist_d
( ElConstDistMatrix_d A, ElConstDistMatrix_d B, double* prod );
EL_EXPORT ElError ElHilbertSchmidtDist_c
( ElConstDistMatrix_c A, ElConstDistMatrix_c B, complex_float* prod );
EL_EXPORT ElError ElHilbertSchmidtDist_z
( ElConstDistMatrix_z A, ElConstDistMatrix_z B, complex_double* prod );
EL_EXPORT ElError ElHilbertSchmidtDistMultiVec_i
( ElConstDistMultiVec_i A, ElConstDistMultiVec_i B, ElInt* prod );
EL_EXPORT ElError ElHilbertSchmidtDistMultiVec_s
( ElConstDistMultiVec_s A, ElConstDistMultiVec_s B, float* prod );
EL_EXPORT ElError ElHilbertSchmidtDistMultiVec_d
( ElConstDistMultiVec_d A, ElConstDistMultiVec_d B, double* prod );
EL_EXPORT ElError ElHilbertSchmidtDistMultiVec_c
( ElConstDistMultiVec_c A, ElConstDistMultiVec_c B, complex_float* prod );
EL_EXPORT ElError ElHilbertSchmidtDistMultiVec_z
( ElConstDistMultiVec_z A, ElConstDistMultiVec_z B, complex_double* prod );
/* TODO: Sparse versions */

/* IndexDependentFill
   ================== */
EL_EXPORT ElError ElIndexDependentFill_i
( ElMatrix_i A, ElInt (*fill)(ElInt,ElInt) );
EL_EXPORT ElError ElIndexDependentFill_s
( ElMatrix_s A, float (*fill)(ElInt,ElInt) );
EL_EXPORT ElError ElIndexDependentFill_d
( ElMatrix_d A, double (*fill)(ElInt,ElInt) );
EL_EXPORT ElError ElIndexDependentFill_c
( ElMatrix_c A, complex_float (*fill)(ElInt,ElInt) );
EL_EXPORT ElError ElIndexDependentFill_z
( ElMatrix_z A, complex_double (*fill)(ElInt,ElInt) );
EL_EXPORT ElError ElIndexDependentFillDist_i
( ElDistMatrix_i A, ElInt (*fill)(ElInt,ElInt) );
EL_EXPORT ElError ElIndexDependentFillDist_s
( ElDistMatrix_s A, float (*fill)(ElInt,ElInt) );
EL_EXPORT ElError ElIndexDependentFillDist_d
( ElDistMatrix_d A, double (*fill)(ElInt,ElInt) );
EL_EXPORT ElError ElIndexDependentFillDist_c
( ElDistMatrix_c A, complex_float (*fill)(ElInt,ElInt) );
EL_EXPORT ElError ElIndexDependentFillDist_z
( ElDistMatrix_z A, complex_double (*fill)(ElInt,ElInt) );
/* IndexDependentMap
   ================= */
EL_EXPORT ElError ElIndexDependentMap_i
( ElMatrix_i A, ElInt (*func)(ElInt,ElInt,ElInt) );
EL_EXPORT ElError ElIndexDependentMap_s
( ElMatrix_s A, float (*func)(ElInt,ElInt,float) );
EL_EXPORT ElError ElIndexDependentMap_d
( ElMatrix_d A, double (*func)(ElInt,ElInt,double) );
EL_EXPORT ElError ElIndexDependentMap_c
( ElMatrix_c A, complex_float (*func)(ElInt,ElInt,complex_float) );
EL_EXPORT ElError ElIndexDependentMap_z
( ElMatrix_z A, complex_double (*func)(ElInt,ElInt,complex_double) );
EL_EXPORT ElError ElIndexDependentMapDist_i
( ElDistMatrix_i A, ElInt (*func)(ElInt,ElInt,ElInt) );
EL_EXPORT ElError ElIndexDependentMapDist_s
( ElDistMatrix_s A, float (*func)(ElInt,ElInt,float) );
EL_EXPORT ElError ElIndexDependentMapDist_d
( ElDistMatrix_d A, double (*func)(ElInt,ElInt,double) );
EL_EXPORT ElError ElIndexDependentMapDist_c
( ElDistMatrix_c A, complex_float (*func)(ElInt,ElInt,complex_float) );
EL_EXPORT ElError ElIndexDependentMapDist_z
( ElDistMatrix_z A, complex_double (*func)(ElInt,ElInt,complex_double) );
/* Kronecker product
   ================= */
EL_EXPORT ElError ElKronecker_i
( ElConstMatrix_i A, ElConstMatrix_i B, ElMatrix_i C );
EL_EXPORT ElError ElKronecker_s
( ElConstMatrix_s A, ElConstMatrix_s B, ElMatrix_s C );
EL_EXPORT ElError ElKronecker_d
( ElConstMatrix_d A, ElConstMatrix_d B, ElMatrix_d C );
EL_EXPORT ElError ElKronecker_c
( ElConstMatrix_c A, ElConstMatrix_c B, ElMatrix_c C );
EL_EXPORT ElError ElKronecker_z
( ElConstMatrix_z A, ElConstMatrix_z B, ElMatrix_z C );
EL_EXPORT ElError ElKroneckerDist_i
( ElConstMatrix_i A, ElConstMatrix_i B, ElDistMatrix_i C );
EL_EXPORT ElError ElKroneckerDist_s
( ElConstMatrix_s A, ElConstMatrix_s B, ElDistMatrix_s C );
EL_EXPORT ElError ElKroneckerDist_d
( ElConstMatrix_d A, ElConstMatrix_d B, ElDistMatrix_d C );
EL_EXPORT ElError ElKroneckerDist_c
( ElConstMatrix_c A, ElConstMatrix_c B, ElDistMatrix_c C );
EL_EXPORT ElError ElKroneckerDist_z
( ElConstMatrix_z A, ElConstMatrix_z B, ElDistMatrix_z C );
EL_EXPORT ElError ElKroneckerSparse_i
( ElConstSparseMatrix_i A, ElConstSparseMatrix_i B, ElSparseMatrix_i C );
EL_EXPORT ElError ElKroneckerSparse_s
( ElConstSparseMatrix_s A, ElConstSparseMatrix_s B, ElSparseMatrix_s C );
EL_EXPORT ElError ElKroneckerSparse_d
( ElConstSparseMatrix_d A, ElConstSparseMatrix_d B, ElSparseMatrix_d C );
EL_EXPORT ElError ElKroneckerSparse_c
( ElConstSparseMatrix_c A, ElConstSparseMatrix_c B, ElSparseMatrix_c C );
EL_EXPORT ElError ElKroneckerSparse_z
( ElConstSparseMatrix_z A, ElConstSparseMatrix_z B, ElSparseMatrix_z C );
EL_EXPORT ElError ElKroneckerDistSparse_i
( ElConstSparseMatrix_i A, ElConstSparseMatrix_i B, ElDistSparseMatrix_i C );
EL_EXPORT ElError ElKroneckerDistSparse_s
( ElConstSparseMatrix_s A, ElConstSparseMatrix_s B, ElDistSparseMatrix_s C );
EL_EXPORT ElError ElKroneckerDistSparse_d
( ElConstSparseMatrix_d A, ElConstSparseMatrix_d B, ElDistSparseMatrix_d C );
EL_EXPORT ElError ElKroneckerDistSparse_c
( ElConstSparseMatrix_c A, ElConstSparseMatrix_c B, ElDistSparseMatrix_c C );
EL_EXPORT ElError ElKroneckerDistSparse_z
( ElConstSparseMatrix_z A, ElConstSparseMatrix_z B, ElDistSparseMatrix_z C );