python/blas_like/level1.py


def GetSubmatrix(A,I,J):
  if type(I) is not IndexRange or type(J) is not IndexRange:
    TypeExcept()
  if type(A) is Matrix:
    ASub = Matrix(A.tag)
    args = [A.obj,I,J,ASub.obj]
    if   A.tag == iTag: lib.ElGetContigSubmatrix_i(*args)
    elif A.tag == sTag: lib.ElGetContigSubmatrix_s(*args)
    elif A.tag == dTag: lib.ElGetContigSubmatrix_d(*args)
    elif A.tag == cTag: lib.ElGetContigSubmatrix_c(*args)
    elif A.tag == zTag: lib.ElGetContigSubmatrix_z(*args)
    else: DataExcept()
    return ASub
  elif type(A) is DistMatrix:
    ASub = DistMatrix(A.tag,MC,MR,A.Grid())
    args = [A.obj,I,J,ASub.obj]
    if   A.tag == iTag: lib.ElGetContigSubmatrixDist_i(*args)
    elif A.tag == sTag: lib.ElGetContigSubmatrixDist_s(*args)
    elif A.tag == dTag: lib.ElGetContigSubmatrixDist_d(*args)
    elif A.tag == cTag: lib.ElGetContigSubmatrixDist_c(*args)
    elif A.tag == zTag: lib.ElGetContigSubmatrixDist_z(*args)
    else: DataExcept()
    return ASub
  elif type(A) is SparseMatrix:
    ASub = SparseMatrix(A.tag)
    args = [A.obj,I,J,ASub.obj]
    if   A.tag == iTag: lib.ElGetContigSubmatrixSparse_i(*args)
    elif A.tag == sTag: lib.ElGetContigSubmatrixSparse_s(*args)
    elif A.tag == dTag: lib.ElGetContigSubmatrixSparse_d(*args)
    elif A.tag == cTag: lib.ElGetContigSubmatrixSparse_c(*args)
    elif A.tag == zTag: lib.ElGetContigSubmatrixSparse_z(*args)
    else: DataExcept()
    return ASub
  elif type(A) is DistSparseMatrix:
    ASub = DistSparseMatrix(A.tag,A.Grid())
    args = [A.obj,I,J,ASub.obj]
    if   A.tag == iTag: lib.ElGetContigSubmatrixDistSparse_i(*args)
    elif A.tag == sTag: lib.ElGetContigSubmatrixDistSparse_s(*args)
    elif A.tag == dTag: lib.ElGetContigSubmatrixDistSparse_d(*args)
    elif A.tag == cTag: lib.ElGetContigSubmatrixDistSparse_c(*args)
    elif A.tag == zTag: lib.ElGetContigSubmatrixDistSparse_z(*args)
    else: DataExcept()
    return ASub
  elif type(A) is DistMultiVec:
    ASub = DistMultiVec(A.tag,A.Grid())
    args = [A.obj,I,J,ASub.obj]
    if   A.tag == iTag: lib.ElGetContigSubmatrixDistMultiVec_i(*args)
    elif A.tag == sTag: lib.ElGetContigSubmatrixDistMultiVec_s(*args)
    elif A.tag == dTag: lib.ElGetContigSubmatrixDistMultiVec_d(*args)
    elif A.tag == cTag: lib.ElGetContigSubmatrixDistMultiVec_c(*args)
    elif A.tag == zTag: lib.ElGetContigSubmatrixDistMultiVec_z(*args)
    else: DataExcept()
    return ASub
  else: TypeExcept()

# Hadamard
# --------
lib.ElHadamard_i.argtypes = \
lib.ElHadamard_s.argtypes = \
lib.ElHadamard_d.argtypes = \
lib.ElHadamard_c.argtypes = \
lib.ElHadamard_z.argtypes = \
lib.ElHadamardDist_i.argtypes = \
lib.ElHadamardDist_s.argtypes = \
lib.ElHadamardDist_d.argtypes = \
lib.ElHadamardDist_c.argtypes = \
lib.ElHadamardDist_z.argtypes = \
  [c_void_p,c_void_p,c_void_p]

def Hadamard(A,B,C):
  if type(A) is not type(B) or type(B) is not type(C):
    raise Exception('Matrix types must match')
  if A.tag != B.tag or B.tag != C.tag:
    raise Exception('Matrix datatypes must match')
  args = [A.obj,B.obj,C.obj]
  if type(A) is Matrix:
    if   A.tag == iTag: lib.ElHadamard_i(*args)
    elif A.tag == sTag: lib.ElHadamard_s(*args)
    elif A.tag == dTag: lib.ElHadamard_d(*args)
    elif A.tag == cTag: lib.ElHadamard_c(*args)
    elif A.tag == zTag: lib.ElHadamard_z(*args)
    else: DataExcept()
  elif type(A) is DistMatrix:
    if   A.tag == iTag: lib.ElHadamardDist_i(*args)
    elif A.tag == sTag: lib.ElHadamardDist_s(*args)
    elif A.tag == dTag: lib.ElHadamardDist_d(*args)
    elif A.tag == cTag: lib.ElHadamardDist_c(*args)
    elif A.tag == zTag: lib.ElHadamardDist_z(*args)
    else: DataExcept()
  else: TypeExcept()

# Hilbert-Schmidt
# ---------------
lib.ElHilbertSchmidt_i.argtypes = \
lib.ElHilbertSchmidtDist_i.argtypes = \
lib.ElHilbertSchmidtDistMultiVec_i.argtypes = \
  [c_void_p,c_void_p,POINTER(iType)]

lib.ElHilbertSchmidt_s.argtypes = \
lib.ElHilbertSchmidtDist_s.argtypes = \
lib.ElHilbertSchmidtDistMultiVec_s.argtypes = \
  [c_void_p,c_void_p,POINTER(sType)]

lib.ElHilbertSchmidt_d.argtypes = \
lib.ElHilbertSchmidtDist_d.argtypes = \
lib.ElHilbertSchmidtDistMultiVec_d.argtypes = \
  [c_void_p,c_void_p,POINTER(dType)]

lib.ElHilbertSchmidt_c.argtypes = \
lib.ElHilbertSchmidtDist_c.argtypes = \
lib.ElHilbertSchmidtDistMultiVec_c.argtypes = \
  [c_void_p,c_void_p,POINTER(cType)]

lib.ElHilbertSchmidt_z.argtypes = \
lib.ElHilbertSchmidtDist_z.argtypes = \
lib.ElHilbertSchmidtDistMultiVec_z.argtypes = \
  [c_void_p,c_void_p,POINTER(zType)]

def HilbertSchmidt(A,B):
  if type(A) is type(B): raise Exception('Matrix types must match')
  if A.tag != B.tag: raise Exception('Datatypes must match')
  prod = TagToType(A.tag)()
  args = [A.obj,B.obj,pointer(prod)]
  if type(A) is Matrix:
    if   A.tag == iTag: lib.ElHilbertSchmidt_i(*args)
    elif A.tag == sTag: lib.ElHilbertSchmidt_s(*args)
    elif A.tag == dTag: lib.ElHilbertSchmidt_d(*args)
    elif A.tag == cTag: lib.ElHilbertSchmidt_c(*args)
    elif A.tag == zTag: lib.ElHilbertSchmidt_z(*args)
    else: DataExcept()
  elif type(A) is DistMatrix:
    if   A.tag == iTag: lib.ElHilbertSchmidtDist_i(*args)
    elif A.tag == sTag: lib.ElHilbertSchmidtDist_s(*args)
    elif A.tag == dTag: lib.ElHilbertSchmidtDist_d(*args)
    elif A.tag == cTag: lib.ElHilbertSchmidtDist_c(*args)
    elif A.tag == zTag: lib.ElHilbertSchmidtDist_z(*args)
    else: DataExcept()
  elif type(A) is DistMultiVec:
    if   A.tag == iTag: lib.ElHilbertSchmidtDistMultiVec_i(*args)
    elif A.tag == sTag: lib.ElHilbertSchmidtDistMultiVec_s(*args)
    elif A.tag == dTag: lib.ElHilbertSchmidtDistMultiVec_d(*args)
    elif A.tag == cTag: lib.ElHilbertSchmidtDistMultiVec_c(*args)
    elif A.tag == zTag: lib.ElHilbertSchmidtDistMultiVec_z(*args)
    else: DataExcept()
  else: TypeExcept()
  return ScalarData(prod)

# Index dependent fill
# --------------------
lib.ElIndexDependentFill_i.argtypes = \
lib.ElIndexDependentFillDist_i.argtypes = \
  [c_void_p,CFUNCTYPE(iType,iType,iType)]

lib.ElIndexDependentFill_s.argtypes = \
lib.ElIndexDependentFillDist_s.argtypes = \
  [c_void_p,CFUNCTYPE(sType,iType,iType)]

lib.ElIndexDependentFill_d.argtypes = \
lib.ElIndexDependentFillDist_d.argtypes = \
  [c_void_p,CFUNCTYPE(dType,iType,iType)]

lib.ElIndexDependentFill_c.argtypes = \
lib.ElIndexDependentFillDist_c.argtypes = \
  [c_void_p,CFUNCTYPE(cType,iType,iType)]

lib.ElIndexDependentFill_z.argtypes = \
lib.ElIndexDependentFillDist_z.argtypes = \
  [c_void_p,CFUNCTYPE(zType,iType,iType)]

def IndexDependentFill(A,fill):
  cFill = CFUNCTYPE(TagToType(A.tag),iType,iType)(fill)
  args = [A.obj,cFill]
  if type(A) is Matrix:
    if   A.tag == iTag: lib.ElIndexDependentFill_i(*args)
    elif A.tag == sTag: lib.ElIndexDependentFill_s(*args)
    elif A.tag == dTag: lib.ElIndexDependentFill_d(*args)
    elif A.tag == cTag: lib.ElIndexDependentFill_c(*args)
    elif A.tag == zTag: lib.ElIndexDependentFill_z(*args)
    else: DataExcept()
  elif type(A) is DistMatrix:
    if   A.tag == iTag: lib.ElIndexDependentFillDist_i(*args)
    elif A.tag == sTag: lib.ElIndexDependentFillDist_s(*args)
    elif A.tag == dTag: lib.ElIndexDependentFillDist_d(*args)
    elif A.tag == cTag: lib.ElIndexDependentFillDist_c(*args)
    elif A.tag == zTag: lib.ElIndexDependentFillDist_z(*args)
    else: DataExcept()
  else: TypeExcept()

# Index dependent map
# -------------------
lib.ElIndexDependentMap_i.argtypes = \
lib.ElIndexDependentMapDist_i.argtypes = \
  [c_void_p,CFUNCTYPE(iType,iType,iType,iType)]

lib.ElIndexDependentMap_s.argtypes = \
lib.ElIndexDependentMapDist_s.argtypes = \
  [c_void_p,CFUNCTYPE(sType,iType,iType,sType)]

lib.ElIndexDependentMap_d.argtypes = \
lib.ElIndexDependentMapDist_d.argtypes = \
  [c_void_p,CFUNCTYPE(dType,iType,iType,dType)]

lib.ElIndexDependentMap_c.argtypes = \
lib.ElIndexDependentMapDist_c.argtypes = \
  [c_void_p,CFUNCTYPE(cType,iType,iType,cType)]

lib.ElIndexDependentMap_z.argtypes = \
lib.ElIndexDependentMapDist_z.argtypes = \
  [c_void_p,CFUNCTYPE(zType,iType,iType,zType)]

def IndexDependentMap(A,mapFunc):
  typeA = TagToType(A)
  cMap = CFUNCTYPE(typeA,iType,iType,typeA)(mapFunc)
  args = [A.obj,cMap]
  if type(A) is Matrix:
    if   A.tag == iTag: lib.ElIndexDependentMap_i(*args)
    elif A.tag == sTag: lib.ElIndexDependentMap_s(*args)
    elif A.tag == dTag: lib.ElIndexDependentMap_d(*args)
    elif A.tag == cTag: lib.ElIndexDependentMap_c(*args)
    elif A.tag == zTag: lib.ElIndexDependentMap_z(*args)
    else: DataExcept()
  elif type(A) is DistMatrix:
    if   A.tag == iTag: lib.ElIndexDependentMapDist_i(*args)
    elif A.tag == sTag: lib.ElIndexDependentMapDist_s(*args)
    elif A.tag == dTag: lib.ElIndexDependentMapDist_d(*args)
    elif A.tag == cTag: lib.ElIndexDependentMapDist_c(*args)
    elif A.tag == zTag: lib.ElIndexDependentMapDist_z(*args)
    else: DataExcept()
  else: TypeExcept()

# Kronecker product
# -----------------
lib.ElKronecker_i.argtypes = \
lib.ElKronecker_s.argtypes = \
lib.ElKronecker_d.argtypes = \
lib.ElKronecker_c.argtypes = \
lib.ElKronecker_z.argtypes = \
lib.ElKroneckerDist_i.argtypes = \
lib.ElKroneckerDist_s.argtypes = \
lib.ElKroneckerDist_d.argtypes = \
lib.ElKroneckerDist_c.argtypes = \
lib.ElKroneckerDist_z.argtypes = \
lib.ElKroneckerSparse_i.argtypes = \
lib.ElKroneckerSparse_s.argtypes = \
lib.ElKroneckerSparse_d.argtypes = \
lib.ElKroneckerSparse_c.argtypes = \
lib.ElKroneckerSparse_z.argtypes = \
lib.ElKroneckerDistSparse_i.argtypes = \
lib.ElKroneckerDistSparse_s.argtypes = \
lib.ElKroneckerDistSparse_d.argtypes = \
lib.ElKroneckerDistSparse_c.argtypes = \
lib.ElKroneckerDistSparse_z.argtypes = \
  [c_void_p,c_void_p,c_void_p]

def Kronecker(A,B,C):
  if type(A) is not type(B):
    raise Exception("Python interface assumes type(A) = type(B)")
  if A.tag != B.tag or B.tag != C.tag:
    raise Exception("Matrix datatypes must match")
  args = [A.obj,B.obj,C.obj]
  if type(C) is Matrix:
    if type(A) is not Matrix:
      LogicError("Assumed A and B were of type Matrix")
    if   A.tag == iTag: lib.ElHadamard_i(*args)
    elif A.tag == sTag: lib.ElHadamard_s(*args)
    elif A.tag == dTag: lib.ElHadamard_d(*args)
    elif A.tag == cTag: lib.ElHadamard_c(*args)
    elif A.tag == zTag: lib.ElHadamard_z(*args)
    else: DataExcept()
  elif type(C) is DistMatrix:
    if type(A) is not Matrix:
      LogicError("Assumed A and B were of type Matrix")
    if   A.tag == iTag: lib.ElHadamardDist_i(*args)
    elif A.tag == sTag: lib.ElHadamardDist_s(*args)
    elif A.tag == dTag: lib.ElHadamardDist_d(*args)
    elif A.tag == cTag: lib.ElHadamardDist_c(*args)
    elif A.tag == zTag: lib.ElHadamardDist_z(*args)
    else: DataExcept()
  elif type(C) is SparseMatrix:
    if type(A) is not SparseMatrix:
      LogicError("Assumed A and B were of type SparseMatrix")
    if   A.tag == iTag: lib.ElHadamardSparse_i(*args)
    elif A.tag == sTag: lib.ElHadamardSparse_s(*args)
    elif A.tag == dTag: lib.ElHadamardSparse_d(*args)
    elif A.tag == cTag: lib.ElHadamardSparse_c(*args)
    elif A.tag == zTag: lib.ElHadamardSparse_z(*args)
    else: DataExcept()
  elif type(C) is DistSparseMatrix:
    if type(A) is not SparseMatrix:
      LogicError("Assumed A and B were of type SparseMatrix")
    if   A.tag == iTag: lib.ElHadamardDistSparse_i(*args)
    elif A.tag == sTag: lib.ElHadamardDistSparse_s(*args)
    elif A.tag == dTag: lib.ElHadamardDistSparse_d(*args)
    elif A.tag == cTag: lib.ElHadamardDistSparse_c(*args)
    elif A.tag == zTag: lib.ElHadamardDistSparse_z(*args)
    else: DataExcept()
  else: TypeExcept()
